# glfw-glad-template

./: .editorconfig  CMakeLists.txt  LICENSE  README.md
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
openglTemplate/: CMakeLists.txt  main.cpp
